<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="10dp"
        android:id="@+id/recycler_view"
        android:scrollbars="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>